--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "scripts": { 
-    "start": "main.js",
+  "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "start": "node serve.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.10.1",
@@ -15,6 +14,7 @@
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "sweetalert2": "^11.1.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
